src/database/snapshots/rust_debug_info__db__tests__get_shape@aarch64-unknown-linux-gnu.snap
---
source: crates/rust_debug_info/src/db/tests.rs
expression: def
snapshot_kind: text
---
Def {
    [salsa id]: Id(3c06),
    name: Some(
        NameId {
            path: [
                "simple_test",
            ],
            name: "TestStruct",
        },
    ),
    kind: Struct(
        StructDef {
            name: "TestStruct",
            size: 32,
            alignment: 8,
            fields: [
                StructField {
                    name: "string_field",
                    offset: 0,
                    ty: Def {
                        [salsa id]: Id(3c00),
                        name: Some(
                            NameId {
                                path: [],
                                name: "&str",
                            },
                        ),
                        kind: Primitive(
                            StrSlice(
                                StrSliceDef {
                                    data_ptr_offset: 0,
                                    length_offset: 8,
                                    size: 16,
                                },
                            ),
                        ),
                    },
                },
                StructField {
                    name: "int_field",
                    offset: 16,
                    ty: Def {
                        [salsa id]: Id(3c02),
                        name: None,
                        kind: Primitive(
                            Pointer(
                                PointerDef {
                                    pointed_type: Def {
                                        [salsa id]: Id(3c01),
                                        name: Some(
                                            NameId {
                                                path: [],
                                                name: "u64",
                                            },
                                        ),
                                        kind: Primitive(
                                            UnsignedInt(
                                                UnsignedIntDef {
                                                    size: 8,
                                                },
                                            ),
                                        ),
                                    },
                                },
                            ),
                        ),
                    },
                },
                StructField {
                    name: "nested",
                    offset: 24,
                    ty: Def {
                        [salsa id]: Id(3c05),
                        name: Some(
                            NameId {
                                path: [
                                    "core",
                                    "option",
                                ],
                                name: "Option<alloc::boxed::Box<simple_test::TestStruct, alloc::alloc::Global>>",
                            },
                        ),
                        kind: Std(
                            Option(
                                OptionDef {
                                    inner_type: Def {
                                        [salsa id]: Id(3c04),
                                        name: None,
                                        kind: Primitive(
                                            Pointer(
                                                PointerDef {
                                                    pointed_type: Def {
                                                        [salsa id]: Id(3c03),
                                                        name: None,
                                                        kind: Alias(
                                                            NameId {
                                                                path: [
                                                                    "simple_test",
                                                                ],
                                                                name: "TestStruct",
                                                            },
                                                        ),
                                                    },
                                                },
                                            ),
                                        ),
                                    },
                                },
                            ),
                        ),
                    },
                },
            ],
        },
    ),
}
