src/database/snapshots/rust_debug_info__db__tests__lookup_function@x86_64-unknown-linux-gnu.snap
---
source: crates/rust_debug_info/src/db/tests.rs
expression: f
snapshot_kind: text
---
Some(
    Function {
        [salsa id]: Id(3800),
        name: "function_call",
        linkage_name: "_ZN11simple_test13function_call17h9ea2308104d494c9E",
        base_address: 31104,
        function_body_address: 31119,
    },
)
